--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,11 @@
 				<tbody class="text-center align-middle">
 					<tr>
 						<th scope="row">10:00</th>
-						<td scope="row"></td>
-						<td scope="row"></td>
-						<td scope="row"></td>
-						<td scope="row"></td>
-						<td scope="row"></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 					</tr>
 					<tr>
 						<th scope="row">11:00</th>
@@ -153,14 +153,14 @@
 				</div>
 
 				<div class="form-floating mt-3">
-					<select class="form-select" aria-label="Floating label select example" name="eventDay">
+					<select class="form-select" aria-label="Floating label select example" name="eventDay" id="eventDay">
 						<option selected value="0">Monday</option>
 						<option value="1">Tuesday</option>
 						<option value="2">Wednesday</option>
 						<option value="3">Thursday</option>
 						<option value="4">Friday</option>
 					</select>
-					<label for="eventDat">Day</label>
+					<label for="eventDay">Day</label>
 				</div>
 
 				<div class="form-floating mt-3">
